--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,13 @@
         </header>
         <section id="principal">
             <article>
-                <p>PAGE DE CONTACT</p>
+                <div class="medium-6 medium-offset-1"><h3>Votre demande </h3><div class="select optional"><label class="select optional control-label" for="contact_reason">Motif</label><select class="select optional" id="contact_reason" name="contact[reason]"><option value="">-</option>
+                    <option value="delivery">Service de livraison : question concernant une commande, une livraison ou un retour</option>
+                    <option value="business">Service commercial : question concernant un produit, un achat, une taille</option>
+                    <option value="autre">Autres</option>
+                </div>
+                
+                            <input class="button primary right js-sav-send-ask--button" name="commit" type="submit" value="Envoyer votre demande">
             </article>
         </section>
         <footer><a href="conditions.html">Conditions d'utilisation</a><p></p></footer>
