--- a/montres.html
+++ b/montres.html
@@ -18,9 +18,9 @@
         </header>
         <section id="sectionthema">
             <h1>Catégories les plus populaires</h1>
-            <article id="gauche"><a href="route.html">Route</a></article>
-            <article id="milieu"><a href="cross.html">Cross</a></article>
-            <article id="droite"><a href="piste.html">Piste</a></article>
+            <article id="gauche"><a href="route.html">Hommes</a></article>
+            <article id="milieu"><a href="cross.html">Femmes</a></article>
+            <article id="droite"><a href="piste.html">Enfants</a></article>
         </section>
 
         <footer><a href="conditions.html">Conditions d'utilisation</a><p></p></footer>
