--- a/index.html
+++ b/index.html
@@ -18,13 +18,27 @@
         </header>
         <section id="principal">
             <article>
-                <p>Au delà de l'obligation légale, le port d'un casque est le garant de votre sécurité. Le choix de votre casque doit se faire en fonction de vos besoins (route, cross, piste...).</p>
-                <p>Spécialiste reconnu dans l'univers de la sécurité du deux-roues, Nolark vous propose des milliers de modèles de casques disponibles au travers de plus de 50 marques. Vous trouverez ici tous les types de casques moto : jet, intégral, modulable, transformable, piste, cross ou encore un large choix de casques moto enfant (taille et poids spécialement adaptés).</p>
-                <p>Nolark c'est également la disponibilité de toutes les couleurs et matières et ce, pour toutes les bourses.</p>
-                <p>Une question ? Un conseil ? Nos conseillers sont là pour vous aiguiller afin de trouver le modèle qui correspond à vos besoins.</p>
-                <p>Nolark n'est pas seulement un magasin de casques, c'est avant tout une équipe de passionnés qui sélectionnent pour vous les meilleurs casques moto afin de répondre au mieux à vos attentes.</p>
+                <p>Accessoire de mode, la montre de nos jours est très populaire. Du plus grand au plus petit, arborer cet objet sur 
+                   son poignet semble provoquer une certaine fierté. Réflexe utile ou agréable, la nécessité de porter une montre n’est 
+                   pas toujours avérée. Ce geste, pourtant si anodin, s’est imposé au quotidien, qu’il est devenu une habitude.</p>
+                   <img id="gif" src="gif.gif">
+                <p>On a coutume de dire que la perfection se lit dans les détails. Ils sont nombreux à le matérialiser cette pensée en 
+                   veillant à toujours donner une touche d’originalité à leur allure. La montre, dans toute sa discrétion, réussit à 
+                   vêtir la personne qui la porte d’une élégance incontestable. Sur un homme comme sur une femme, elle possède un 
+                   certain attrait qui fait d’elle une arme de séduction. Voilà pourquoi il faut savoir choisir celle qui s’accorde le 
+                   mieux à sa personnalité.</p>
+                  
+                <p>Certaines montres ont été conçues tel un chef-d’œuvre d’art. Leur originalité leur donne une authenticité qui les 
+                   rend uniques. Généralement présent au cours de la vie, la montre fait partie intégrante de son propriétaire. S’en 
+                   séparer serait comme couper une partie de soi. Cet accessoire peut aussi devenir un symbole de souvenirs ou un bijou 
+                   de famille. Il est mieux d’investir dans un accessoire qui peut traverser des générations dans le respect des 
+                   traditions.</p>
             </article>
         </section>
+        <section>
+            
+        </section>
+
         <footer><a href="conditions.html">Conditions d'utilisation</a><p></p></footer>
     </body>
 </html>
