--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
         <title>MILLENARY</title>
         <meta charset="UTF-8" />
         <meta name="author" content="BTS SIO" />
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="header.css" />
     </head>
     <body>
         <header>
-            <nav>
+            <br>
+            <br>
+            <nav id="navm">
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="montres.html">Nos montres</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <form class="Barre_de_recherche">
+                    <input class="Recherche" type="text" name="Recherche" placeholder="Recherche">
+                    <button class="Bouton_de_recherche" type="submit" href="#">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </form>
             </nav>
         </header>
         <section id="principal">
             <article>
                 <div>
+                    <br>
+                    <br>
                     <p>Accessoire de mode, la montre de nos jours est très populaire. Du plus grand au plus petit, arborer cet objet sur 
                         son poignet semble provoquer une certaine fierté. Réflexe utile ou agréable, la nécessité de porter une montre n’est 
                         pas toujours avérée. Ce geste, pourtant si anodin, s’est imposé au quotidien, qu’il est devenu une habitude.</p>
@@ -37,10 +48,7 @@
                 <img id="gif" src="gif.gif">
             </article>
         </section>
-        <section>
-            
-        </section>
 
-        <footer><a href="conditions.html">Conditions d'utilisation</a><p></p></footer>
+        <footer><br><a href="conditions.html">Conditions d'utilisation</a></footer>
     </body>
 </html>
