--- a/montres.html
+++ b/montres.html
@@ -5,22 +5,30 @@
         <meta charset="UTF-8" />
         <meta name="author" content="BTS SIO" />
         <link rel="stylesheet" href="montres.css" />
+        <link rel="stylesheet" href="header.css" />
     </head>
     <body>
         <header>
-            <nav>
+            <br>
+            <br>
+            <nav id="navm">
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="montres.html">Nos montres</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <form class="Barre_de_recherche">
+                    <input class="Recherche" type="text" name="Recherche" placeholder="Recherche">
+                    <button class="Bouton_de_recherche" type="submit" href="#">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </form>
             </nav>
         </header>
         <section id="sectionthema">
-            <h1>Catégories les plus populaires</h1>
+            <h1>Catégories</h1>
             <article id="gauche"><a href="route.html">Hommes</a></article>
             <article id="milieu"><a href="cross.html">Femmes</a></article>
-            <article id="droite"><a href="piste.html">Enfants</a></article>
         </section>
 
         <footer><a href="conditions.html">Conditions d'utilisation</a><p></p></footer>
