--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="author" content="BTS SIO" />
         <link rel="stylesheet" href="index.css" />
-        <link rel="stylesheet" href="header.css" />
+        <link rel="stylesheet" href="css/header.css" />
     </head>
     <body>
         <header>
@@ -14,8 +14,8 @@
             <nav id="navm">
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="montres.html">Nos montres</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="pages/montres.html">Nos montres</a></li>
+                    <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
                 <form class="Barre_de_recherche">
                     <input class="Recherche" type="text" name="Recherche" placeholder="Recherche">
@@ -49,6 +49,6 @@
             </article>
         </section>
 
-        <footer><br><a href="conditions.html">Conditions d'utilisation</a></footer>
+        <footer><a href="pages/conditions.html">Conditions d'utilisation</a></footer>
     </body>
 </html>
