--- a/pages/montres.html
+++ b/pages/montres.html
@@ -4,8 +4,8 @@
         <title>MILLENARY</title>
         <meta charset="UTF-8" />
         <meta name="author" content="BTS SIO" />
-        <link rel="stylesheet" href="montres.css" />
-        <link rel="stylesheet" href="header.css" />
+        <link rel="stylesheet" href="../css/montres.css" />
+        <link rel="stylesheet" href="../css/header.css" />
     </head>
     <body>
         <header>
@@ -13,7 +13,7 @@
             <br>
             <nav id="navm">
                 <ul>
-                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="../index.html">Accueil</a></li>
                     <li><a href="montres.html">Nos montres</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -31,6 +31,6 @@
             <article id="milieu"><a href="cross.html">Femmes</a></article>
         </section>
 
-        <footer><a href="conditions.html">Conditions d'utilisation</a><p></p></footer>
+        <footer><a href="conditions.html">Conditions d'utilisation</a></footer>
     </body>
 </html>
