--- a/pages/montres.html
+++ b/pages/montres.html
@@ -25,11 +25,96 @@
                 </form>
             </nav>
         </header>
-        <section id="sectionthema">
-            <h1>Catégories</h1>
-            <article id="gauche"><a href="route.html">Hommes</a></article>
-            <article id="milieu"><a href="cross.html">Femmes</a></article>
-        </section>
+
+        <div class="main">
+            <h1><i class="far fa-eye"></i>EN VITRINE</h1>
+            <div class="carousel-articles">
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+            </div>
+        <hr/>
+            <h1><i class="far fa-eye"></i>ARTICLES POUR VOUS</h1>
+            <div class="carousel-articles">
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+                <a class="carousel-article">
+                    <img src="../images/montrefemme.png">
+                    <div class="info">
+                        <h2>[NOM DE LA MONTRE]</h2>
+                        <h1>865 €</h1>
+                        <h3>[DESCRIPTION]</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
 
         <footer><a href="conditions.html">Conditions d'utilisation</a></footer>
     </body>
