--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
         <meta name="author" content="BTS SIO" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500,600">
         <link rel="stylesheet" href="css/header.css" />
-        <style>
-            body {
-                background: url(images/montrecollection1.jpg) no-repeat;
-                background-size: cover;
-                height: 100vh;
-            }
-        </style>
+        <link rel="stylesheet" href="css/index.css" />
     </head>
 
     <body>
@@ -20,9 +14,11 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/collection.html">Collection</a></li>
-                <li><a href="pages/gallery.html">Gallery</a></li>
+                <li><a href="pages/about.html">About us</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </div>
+        <div class="vide"></div>
+        <footer>TEST TEST TEST TEST TEST TEST TEST TEST</footer>
     </body>
 </html>
