--- a/pages/collection.html
+++ b/pages/collection.html
@@ -7,14 +7,6 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500,600">
         <link rel="stylesheet" href="../css/header.css" />
         <link rel="stylesheet" href="../css/collection.css" />
-        <style>
-            body {
-                background: url(../images/montrecollection2.jpg) no-repeat;
-                background-size: cover;
-                background-position: center;
-                height: auto;
-            }
-        </style>
     </head>
 
     <body>
@@ -22,7 +14,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="collection.html">Collection</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="about.html">About us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -30,35 +22,35 @@
             <h1><i class="far fa-eye"></i>EN VITRINE</h1>
             <div class="carousel-articles">
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre1.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>DATEJUST 31</h2>
+                        <h1>15 200€</h1>
+                        <h3>Oyster, 31 mm, acier Oystersteel, or gris et diamants, Nouveau modèle 2020</h3>
                     </div>
                 </a>
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre2.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>SUBARINER</h2>
+                        <h1>7650€</h1>
+                        <h3>Oyster, 41 mm, acier Oystersteel, Nouveau modèle 2020</h3>
                     </div>
                 </a>
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre3.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>SKY-DWELLER</h2>
+                        <h1>37 700€</h1>
+                        <h3>Oyster, 42 mm, or jaune, Nouveau modèle 2020</h3>
                     </div>
                 </a>
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre4.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>GMT - MASTER II</h2>
+                        <h1>13 950€</h1>
+                        <h3>Oyster, 40 mm, acier Oystersteel et or Everose</h3>
                     </div>
                 </a>
             </div>
@@ -66,51 +58,35 @@
             <h1><i class="far fa-eye"></i>CLASSIQUES</h1>
             <div class="carousel-articles">
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre5.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>COSMOGRAPH DAYTONA</h2>
+                        <h1>28 000€</h1>
+                        <h3>Oyster, 40 mm, or gris</h3>
                     </div>
                 </a>
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre6.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>EXPLORER</h2>
+                        <h1>6 150€</h1>
+                        <h3>Oyster, 39 mm, acier Oystersteel</h3>
                     </div>
                 </a>
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre7.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>MILGAUSS</h2>
+                        <h1>7 850€</h1>
+                        <h3>Oyster, 40 mm, acier Oystersteel</h3>
                     </div>
                 </a>
                 <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
+                    <img src="../images/montre8.webp">
                     <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
-                    </div>
-                </a>
-                <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
-                    <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
-                    </div>
-                </a>
-                <a class="carousel-article">
-                    <img src="../images/montrefemme.png">
-                    <div class="info">
-                        <h2>[NOM DE LA MONTRE]</h2>
-                        <h1>865 €</h1>
-                        <h3>[DESCRIPTION]</h3>
+                        <h2>OYSTER PERPETUAL 41</h2>
+                        <h1>5 550€</h1>
+                        <h3>Oyster, 41 mm, acier Oystersteel, Nouveau modèle 2020</h3>
                     </div>
                 </a>
             </div>
