--- a/pages/about.html
+++ b/pages/about.html
@@ -6,15 +6,7 @@
         <meta name="author" content="BTS SIO" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500,600">
         <link rel="stylesheet" href="../css/header.css" />
-        <link rel="stylesheet" href="../css/gallery.css" />
-        <style>
-            body {
-                background: url(../images/montrecollection3.jpg) no-repeat;
-                background-size: cover;
-                height: 100vh;
-                font-family: 'Roboto-ThinItalic';
-            }
-        </style>
+        <link rel="stylesheet" href="../css/about.css" />
     </head>
 
     <body>
@@ -22,7 +14,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="collection.html">Collection</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="about.html">About us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
@@ -34,14 +26,12 @@
                             son poignet semble provoquer une certaine fierté. Réflexe utile ou agréable, la nécessité de porter une montre n’est 
                             pas toujours avérée. Ce geste, pourtant si anodin, s’est imposé au quotidien, qu’il est devenu une habitude.
                         </p>
-                        <br>
                         <p>On a coutume de dire que la perfection se lit dans les détails. Ils sont nombreux à le matérialiser cette pensée en 
                             veillant à toujours donner une touche d’originalité à leur allure. La montre, dans toute sa discrétion, réussit à 
                             vêtir la personne qui la porte d’une élégance incontestable. Sur un homme comme sur une femme, elle possède un 
                             certain attrait qui fait d’elle une arme de séduction. Voilà pourquoi il faut savoir choisir celle qui s’accorde le 
                             mieux à sa personnalité.
                         </p>
-                        <br>
                         <p>Certaines montres ont été conçues tel un chef-d’œuvre d’art. Leur originalité leur donne une authenticité qui les 
                             rend uniques. Généralement présent au cours de la vie, la montre fait partie intégrante de son propriétaire. S’en 
                             séparer serait comme couper une partie de soi. Cet accessoire peut aussi devenir un symbole de souvenirs ou un bijou 
