--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,14 +8,6 @@
         <link rel="stylesheet" href="../css/header.css" />
         <link rel="stylesheet" href="../css/contact.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                background: url(../images/montrecollection4.jpg) no-repeat;
-                background-size: cover;
-                font-family: Arial, Helvetica, sans-serif;
-                height: 100vh;
-            }
-        </style>
     </head>
 
     <body>
@@ -23,7 +15,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="collection.html">Collection</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="about.html">About us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
