--- a/pages/collection.html
+++ b/pages/collection.html
@@ -7,19 +7,82 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500,600">
         <link rel="stylesheet" href="../css/header.css" />
         <link rel="stylesheet" href="../css/collection.css" />
+        <script src="https://kit.fontawesome.com/f864103c2e.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <div class="header">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="collection.html">Collection</a></li>
-                <li><a href="about.html">About us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
+
+        <!-- DEBUT DU HEADER -->
+        <header>
+            <div>
+                <img src="../images/logo.png">
+            </div>
+            <div>
+                <ul>
+                    <li><a href="../index.html">Accueil</a></li>
+                    <li><a href="collection.html">Collection</a></li>
+                    <li><a href="about.html">A propos de nous</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a class="btn" onclick="document.querySelector('#signUp').classList.add('active');">S'inscrire</a></li>
+                    <li><a onclick="document.querySelector('#signIn').classList.add('active');">Se connecter</a></li>
+                </ul>       
+            </div>
+
+            <!-- S'inscrire' Popup -->
+            <div class="modal" id="signUp">
+                <div class="container">
+                    <a class="close" onclick="document.querySelector('#signUp').classList.remove('active');"><i class="fas fa-times"></i></a>
+                    <form>
+                        <h1 class="title">S'inscrire</h1>
+                        <div class="form-group">
+                            <i class="fas fa-at"></i>
+                            <input type="email" placeholder="Email" required>
+                            <label>Email</label>
+                        </div>
+                        <div class="form-group">
+                            <i class="far fa-user"></i>
+                            <input type="text" placeholder="Nom" required>
+                            <label>Nom</label>
+                        </div>
+                        <div class="form-group">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" placeholder="Mot de passe" required>
+                            <label>Mot de passe</label>
+                        </div>
+                        <input class="form-confirm" href="#" type="submit" value="Créer">
+                    </form>
+                </div>
+            </div>
+
+            <!-- Se connecter -->
+            <div class="modal" id="signIn">
+                <div class="container">
+                    <a class="close" onclick="document.querySelector('#signIn').classList.remove('active');"><i class="fas fa-times"></i></a>
+                    <form>
+                        <h1 class="title">Se connecter</h1>
+                        <div class="form-group">
+                            <i class="far fa-user"></i>
+                            <input type="text" placeholder="Nom" required>
+                            <label>Nom</label>
+                        </div>
+                        <div class="form-group">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" placeholder="Mot de passe" required>
+                            <label>Mot de passe</label>
+                        </div>
+                        <input class="form-confirm" href="#" type="submit" value="Connexion">
+                    </form>
+                </div>
+            </div>
+        </header>
+        <!-- FIN DU HEADER -->
+
         <div class="main">
-            <h1><i class="far fa-eye"></i>EN VITRINE</h1>
+            <h1><i class=""></i>EN VITRINE</h1>
             <div class="carousel-articles">
                 <a class="carousel-article">
                     <img src="../images/montre1.webp">
@@ -55,7 +118,7 @@
                 </a>
             </div>
         <hr/>
-            <h1><i class="far fa-eye"></i>CLASSIQUES</h1>
+            <h1><i class=""></i>CLASSIQUES</h1>
             <div class="carousel-articles">
                 <a class="carousel-article">
                     <img src="../images/montre5.webp">
