--- a/pageshtml/index.html
+++ b/pageshtml/index.html
@@ -32,7 +32,7 @@
                 </ul>       
             </div>
 
-            <!-- S'inscrire' Popup -->
+            <!-- S'inscrire Popup -->
             <div class="modal" id="signUp">
                 <div class="container">
                     <a class="close" onclick="document.querySelector('#signUp').classList.remove('active');"><i class="fas fa-times"></i></a>
